[project]
name = "energymatching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"matplotlib",
	"numpy",
	"POT",
	"torch",
	"torchdyn",
	"torchcfm",
	"pandas",
	"absl-py",
	"torchvision",
	"tqdm",
	"einops",
	"torchmetrics",
	"torchsde",
	"python-Levenshtein",
	"omegaconf",
	"torch-fidelity",
]
